# customer-support-chatbot

./: .env.example  Customer_Support_Chatbot.postman_environment.json  Customer_Support_Chatbot_API.postman_collection.json  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: routes.py  schemas.py
app/core/: chat_service.py  memory.py  tools.py
app/db/: models.py  session.py
app/llm/: chain.py  prompts.py
db/: schema.sql  seed.sql
